--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
 This application is providing each entity the facility to approach nearby blood donors so that it will become much easier to search rare blood groups in the hour of need.
+![GitHub Logo](/images/logo.png)
